Fixed line overflow bug

--- a/mainsite/staticfiles/mainsite/css/base.css
+++ b/mainsite/staticfiles/mainsite/css/base.css
@@ -70,11 +70,12 @@ p {
     color: var(--main-title-color);
 }
 .text-overflow {
-  width: auto;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
   line-height: normal;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
 }
 
 .navbar {
